# fuselage

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  install.sh
.github/: copilot-instructions.md
.github/workflows/: build-and-test.yml  release-check.yml  release-draft.yml  release-publish.yml  release.yml
docs/: README.md  SPEC.md  combining-with-herescript.md  definition-of-done.md  fuselage
docs/analysis/: 2026-04-06-secure-install.md
docs/decisions/0000-necessity-for-a---cache-static-flag/: 0000-necessity-for-a---cache-static-flag.md
docs/decisions/0001-cache-expiry-mechanism/: 0001-cache-expiry-mechanism.md
docs/decisions/0002-designing-installsh/: 0002-designing-installsh.md
docs/process/: definition-of-shippable.md
docs/tasks/: 2026-04-04-core-capability.md  2026-04-05-base64-review.md  2026-04-05-base64.md  2026-04-05-cargo-install-fuselage-review.md  2026-04-05-cargo-install-fuselage.md  2026-04-06-revised-publish-process.md
docs/working-practices/: definition-of-shippable.md  release-credentials.md  ssh-signing.md
scripts/: check-changelog.py
src/: archive.rs  b64stream.rs  main.rs  namespace.rs  procdir.rs
tests/: functest.sh
