[package]
name = "fuselage"
version = "0.1.0"
edition = "2024"
description = "Ephemeral virtual filesystems for processes"
license = "MIT"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# ZIP archive extraction
zip = "2"
# SHA-256 content hashing for --static cache keys
sha2 = "0.10"
hex = "0.4"
# Base64 decoding for text-encoded archives
base64 = "0.22"
# Linux syscalls: unshare(2), mount(2)
nix = { version = "0.29", features = ["mount", "user", "sched", "signal", "process", "fs"] }
# Error handling
anyhow = "1"
thiserror = "2"

[profile.release]
strip = true        # strip symbols (already happening, but makes it explicit)
opt-level = "z"     # optimise for size instead of speed
lto = true          # link-time optimisation removes dead code across crates
codegen-units = 1   # slower build but better LTO

